# BeatFlow

./: .env.example  .gitignore  CLAUDE.md  CODEBUDDY.md  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml  pytest.ini
backend/app/: main.py
backend/app/analysis/: __init__.py  (+2 more)
backend/dev-tools/: create_sharing_tables.py  diag_ecg.py  diag_ecg2.py  diag_ecg3.py  diag_ecg4.py  test_shares_api.sh  verify_ratios.py
backend/scripts/: generate_pcg_samples.py  init-db.sql  upload_pcg_samples.py  upload_pcg_samples.sh
backend/tests/: conftest.py  test_analysis_modules.py  test_annotation_operation_logs.py  test_autonomic_enhanced.py  test_autonomic_reflex.py  test_cancel_hr_override.py  test_causal_graph.py  test_conduction_network.py  test_coronary_enhanced_ans.py  test_ecg_quality.py  test_ecg_synthesizer.py  test_exercise_physiology.py  test_hrv_qt_dynamics.py  test_http_range_streaming.py  test_interaction_state.py  test_lttb.py  test_murmur_config.py  test_pcg_quality.py  test_performance_benchmarks.py  test_pharmacokinetics.py  test_phase2_integration.py  test_physiology_invariants.py  test_physiology_modulator.py  test_physiology_modulator_p0.py  test_pipeline_e2e.py  test_pipeline_exercise.py  test_pipeline_p0_commands.py  test_pipeline_v2.py  test_pipeline_v2_physics.py  test_pipeline_valve_events.py  test_pvc_pattern.py  test_respiratory_system.py  test_storage_and_simulate.py  test_substrate_arrhythmia.py  test_v2_frontend_commands.py  test_v2_waveform_quality.py  test_validator.py  test_ws_binary_protocol.py  test_ws_endpoint.py
(+282 files in other folders)
